<resources>
    <string name="app_name">CalAid</string>
    <string name="labelEmail">Email</string>
    <string name="labelPassword">Password</string>
    <string name="labelLogIn">Log in</string>
    <string name="labelSignUp">Sign Up</string>
    <string name="labelName">First Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="labelHeight">Height (cm)</string>
    <string name="labelWeight">Weight (kgs)</string>
    <string name="labelGender">Gender</string>
    <string name="labelBirthDate">Birth Date</string>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activity_multipliers">
        <item>Sedentary: little or no exercise</item>
        <item>Light: exercise 1–3 times/week</item>
        <item>Moderate: exercise 4–5 times/week</item>
        <item>Active: daily exercise/intense exercise 3–4 times/week </item>
        <item>Very Active: intense exercise 6–7 times/week</item>
        <item>Extra Active: very intense exercise daily/physical job</item>
    </string-array>
</resources>