<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:layout_gravity="top"
        android:src="@drawable/ic_log_in_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/labelLogIn"
        android:layout_marginTop="-50dp"
        android:textSize="35dp"
        android:fontFamily="@font/righteous_regular"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelEmail"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelPassword"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/input_text"
        />
    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:background="@drawable/btn_green"
        android:fontFamily="@font/work_sans"
        android:text="@string/labelLogIn"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_yellow"
        android:fontFamily="@font/work_sans"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/labelSignUp"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textAllCaps="false"
        style="@style/btn_style"        />
</LinearLayout>