<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:layout_gravity="top"
        android:padding="8dp"
        android:src="@drawable/ic_sign_up_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/labelSignUp"
        android:textSize="35dp"
        android:fontFamily="@font/righteous_regular"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelName"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etSignupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelEmail"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelPassword"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/input_text"
        />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="48dp"
        android:background="@drawable/btn_green"
        android:fontFamily="@font/work_sans"
        android:text="@string/labelSignUp"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textAllCaps="false"
        />
</LinearLayout>