<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="Health Information"
        android:textSize="35dp"
        android:fontFamily="@font/righteous_regular"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelHeight"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etSignupHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        android:inputType="phone"
        android:maxLines="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelWeight"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etSignupWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        android:inputType="phone"
        android:maxLines="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelGender"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <Spinner
        android:id="@+id/spinSignUpGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Activity Level"
        android:textSize="24dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <Spinner
        android:id="@+id/spinSignUpActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_green"
        android:fontFamily="@font/work_sans"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textAllCaps="false"
        />
</LinearLayout>