<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/fragmentPersonalInfoSignUp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Account Information"
        android:textSize="35dp"
        android:fontFamily="@font/righteous_regular"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelName"
        android:textSize="22dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etSignupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        android:inputType="text"
        android:maxLines="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Birth Date"
        android:textSize="22dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"
 />
    <Button
        android:id="@+id/btnBirthDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="JAN 01 2020"
        android:textSize="22dp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        style="?android:spinnerStyle"
        android:fontFamily="@font/nunito"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelEmail"
        android:textSize="22dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/labelPassword"
        android:textSize="22dp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/input_text"
        android:maxLines="1"
        />
    <Button
        android:id="@+id/btnNextHealthInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_green"
        android:fontFamily="@font/work_sans"
        android:text="Next"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textAllCaps="false"
        />
</LinearLayout>